syntax = "proto3";
package iofile;

service IoService {
    rpc ioLinkUpdate(IoLinks) returns (IoLinkReply){}
}

message IoLinks {
	string	domain = 1;
	repeated string	paths = 2;
}

message IoLinkReply {
	bool	ok = 1;
	string	message = 2;
	int32 count = 3;
	int32 total = 4;
}
